--- a/WK12HW00TEMPERATURECONVERTER/app/src/main/res/values/colors.xml
+++ b/WK12HW00TEMPERATURECONVERTER/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFF</color>
+    <color name="blue">#4286f4</color>
+    <color name="orange">#f4a941</color>
+    <color name="gray">#7a7a7a</color>
 </resources>
